--- a/src/VariablesMixins.scss
+++ b/src/VariablesMixins.scss
@@ -1,3 +1,13 @@
+/*Variables*/
+//Breakpoints
+$breakpoint-mobile: 480px;
+$breakpoint-tablet: 768px;
+$breakpoint-laptop: 1024px;
+$breakpoint-desktop: 1280px;
+
+
+/*Mixins*/
+
 @mixin flex($direction: row,
   $justify: center,
   $align: center) {
@@ -5,4 +15,30 @@
   flex-direction: $direction;
   justify-content: $justify;
   align-items: $align;
+}
+
+@mixin respond-to($breakpoint) {
+  @if $breakpoint ==mobile {
+    @media (max-width: $breakpoint-mobile) {
+      @content;
+    }
+  }
+
+  @else if $breakpoint ==tablet {
+    @media (max-width: $breakpoint-tablet) {
+      @content;
+    }
+  }
+
+  @else if $breakpoint ==laptop {
+    @media (max-width: $breakpoint-laptop) {
+      @content;
+    }
+  }
+
+  @else if $breakpoint ==desktop {
+    @media (max-width: $breakpoint-desktop) {
+      @content;
+    }
+  }
 }
