--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,38 +1,44 @@
 @use "../../VariablesMixins.scss" as *;
 
 .hero {
-  @include flex(column, center, center);
+  @include flex(column, normal, normal);
 
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  background: #0f172a; // bleu nuit green-friendly
+  background: linear-gradient(0deg, rgba(255, 178, 148, 1) 0%, rgba(255, 130, 98, 1) 16%, rgba(254, 101, 91, 1) 29%, rgba(152, 78, 100, 1) 40%, rgba(93, 81, 126, 1) 49%, rgba(43, 43, 86, 1) 58%, rgba(0, 0, 0, 1) 99%);
   overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: center;
   font-family: 'Poppins', sans-serif;
+  position: relative;
 
   &__title {
+    width: 30vw;
     color: #f0fdf4;
-    font-size: 3rem;
+    font-size: 2.5rem;
     z-index: 9999999;
     position: relative;
-    text-shadow: 0 0 10px rgba(0, 255, 127, 0.2);
+    text-shadow: 0 0px 20px #0f172a;
+
+    @include respond-to(mobile) {
+      font-size: 2.5em;
+    }
   }
 
-  // &__orb {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 150px;
-  //   height: 150px;
-  //   border-radius: 50%;
-  //   background: radial-gradient(circle, #4ade80 0%, transparent 70%);
-  //   pointer-events: none;
-  //   transform: translate(-50%, -50%);
-  //   transition: transform 0.15s ease-out;
-  //   filter: blur(20px);
-  //   opacity: 0.8;
-  //   z-index: 1;
-  // }
+  h1 {
+    margin-top: 43vh;
+    text-align: center;
+  }
+
+  &__image {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+
+    &__field {
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+    }
+  }
 }
