--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,18 +1,19 @@
 @use "../../VariablesMixins.scss" as *;
 
 .homepage {
-  @include flex(column, center, center)
+  @include flex(column, center, center);
+  background-color: #0f172a;
 }
 
 .custom-cursor {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 42vh;
+  left: 75vw;
   transform: translate(-50%, -50%);
-  width: 10px;
-  height: 10px;
+  width: 7px;
+  height: 7px;
   border-radius: 50%;
-  background-color: rgba(255, 225, 0);
+  background-color: rgb(255, 255, 255);
   box-shadow: 0px 0px 10px 10px rgba(255, 225, 0, 0.805);
   pointer-events: none;
   z-index: 999999;
@@ -21,13 +22,15 @@
 
 .custom-cursor-before {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 42vh;
+  left: 75vw;
   transform: translate(-50%, -50%);
-  width: 20px;
-  height: 20px;
-  background: radial-gradient(rgba(255, 188, 5, 0.4), rgba(255, 188, 5, 0.0));
+  width: 15px;
+  height: 15px;
+  background-color: rgba(255, 225, 0, 0.507);
   border-radius: 50%;
   transition: .2s ease;
+  pointer-events: none;
+  z-index: 999999;
   opacity: 1;
 }
