--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -12,16 +12,16 @@
   font-family: 'Poppins', sans-serif;
   position: relative;
 
-  &__title {
+  .typewritter {
     width: 30vw;
     color: #f0fdf4;
-    font-size: 2.5rem;
+    font-size: 3rem;
     z-index: 9999999;
     position: relative;
     text-shadow: 0 0px 20px #0f172a;
 
     @include respond-to(mobile) {
-      font-size: 2.5em;
+      font-size: 2rem;
     }
   }
 
