--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -68,13 +68,20 @@
 }
 
 .contact {
+  @include flex(column, center, center);
+  gap: 0.5em;
+
   img {
     width: 25px;
   }
 
   &__subtitle {
-    font-size: 0.875em;
+    font-size: 0.7em;
     font-weight: 200
+  }
+
+  &__subsubtitle {
+    font-size: 0.5em;
   }
 
   &__links {
