--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,8 @@
 @use "../../VariablesMixins.scss" as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 .navbar {
   @include flex(row, space-between, center);
   width: 100%;
@@ -9,6 +12,8 @@
   padding: 5%;
   color: white;
   z-index: 999;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: 1.2rem;
 
   &__nav {
     @include flex(row, space-between, center);
@@ -21,7 +26,7 @@
 
       &--icon {
         display: none;
-        font-size: 1.5em;
+        font-size: 1.2em;
 
         @include respond-to(mobile) {
           display: block;
