--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -84,6 +84,10 @@
     font-size: 0.5em;
   }
 
+  &__text {
+    text-align: center
+  }
+
   &__links {
     @include flex(row, center, flex-end);
     margin-top: 1em;
