--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -77,11 +77,13 @@
 
   &__subtitle {
     font-size: 0.7em;
-    font-weight: 200
+    font-weight: 200;
+    text-align: center;
   }
 
   &__subsubtitle {
     font-size: 0.5em;
+    text-align: center;
   }
 
   &__text {
