--- a/src/main.scss
+++ b/src/main.scss
@@ -16,6 +16,12 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 li {
   list-style-type: none;
 }
