--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,11 @@
   padding: 0;
 }
 
+#root {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
   color: white;
@@ -14,12 +19,6 @@ html {
 body {
   cursor: none;
   font-family: "Quicksand", sans-serif;
-}
-
-html,
-body {
-  width: 100%;
-  height: 100%;
 }
 
 li {
