--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -53,6 +53,7 @@
 }
 
 .personal-projects {
+  min-height: 100vh;
 
   &__subtitle {
     text-align: center;
@@ -69,7 +70,8 @@
 
 .contact {
   @include flex(column, center, center);
-  gap: 0.5em;
+  gap: 1em;
+  min-height: 100vh;
 
   img {
     width: 25px;
@@ -117,7 +119,11 @@
   box-shadow: 0px 0px 10px 10px rgba(255, 225, 0, 0.805);
   pointer-events: none;
   z-index: 999999;
-  transition: transform 0.3s, opacity 0.3s
+  transition: transform 0.3s, opacity 0.3s;
+
+  @include respond-to(mobile) {
+    display: none
+  }
 }
 
 .custom-cursor-before {
@@ -133,4 +139,8 @@
   pointer-events: none;
   z-index: 999999;
   opacity: 1;
+
+  @include respond-to(mobile) {
+    display: none;
+  }
 }
