--- a/src/main.scss
+++ b/src/main.scss
@@ -36,3 +36,8 @@ h2 {
   font-family: "Quicksand", sans-serif;
   font-weight: 200;
 }
+
+h3 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+}
