--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -70,17 +70,40 @@
     padding: 2em;
   }
 
-  img {
-    width: 40vw;
-    height: 50vh;
-    object-fit: cover;
+  &__crowdfunding {
+    position: relative;
 
-    @include respond-to(mobile) {
-      width: 80vw;
-      height: 50vh;
+    &--circle {
+      @include flex(column, center, center);
+      gap: 0.3em;
+      border-radius: 50%;
+      position: absolute;
+      right: 15%;
+      bottom: 30%;
+      width: 100px;
+      height: 100px;
+      background-color: rgba(255, 225, 0, 0.805);
+      font-size: 0.7rem;
+      text-align: center;
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
+    img {
+      width: 40vw;
       object-fit: cover;
+
+      @include respond-to(mobile) {
+        width: 80vw;
+        height: 50vh;
+        object-fit: cover;
+      }
     }
   }
+
 }
 
 .contact {
@@ -100,10 +123,12 @@
   &__subsubtitle {
     font-size: 0.5em;
     text-align: center;
+    margin-bottom: 2em;
   }
 
   &__text {
-    text-align: center
+    text-align: center;
+    margin-bottom: 2em
   }
 
   &__links {
