--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,6 @@
 @use "../../VariablesMixins.scss" as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .navbar {
   @include flex(row, space-between, center);
@@ -16,7 +15,7 @@
   font-size: 1.2rem;
 
   @include respond-to(mobile) {
-    align-items: flex-start
+    align-items: flex-start;
   }
 
   &__nav {
@@ -28,7 +27,6 @@
       position: fixed;
       right: 5%;
     }
-
 
     &__link {
       display: inline-block;
@@ -53,7 +51,15 @@
         display: block;
 
         @include respond-to(mobile) {
-          display: none;
+          position: absolute;
+          width: 1px;
+          height: 1px;
+          padding: 0;
+          margin: -1px;
+          overflow: hidden;
+          clip: rect(0, 0, 0, 0);
+          white-space: nowrap;
+          border: 0;
         }
       }
     }
@@ -62,9 +68,7 @@
       text-shadow: #ffe100 1px 0 10px;
       transform: scale(1.1) translateY(-3px);
       opacity: 1;
-
     }
-
   }
 
   &__title {
@@ -88,8 +92,18 @@
       transform: translateX(0);
       opacity: 1;
     }
+
+    @media (prefers-reduced-motion: reduce) {
+      &__disponible {
+        transition: none !important;
+        transform: none !important;
+        opacity: 1 !important;
+      }
+
+      &:hover &__disponible {
+        transform: none !important;
+        opacity: 1 !important;
+      }
+    }
   }
-
-
-
 }
