--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -11,7 +11,6 @@
 .about {
   padding: 2em;
 
-
   h2 {
     text-align: center;
     margin-bottom: 2em;
@@ -34,13 +33,12 @@
   }
 
   &__cards-wrapper {
-    @include flex (column, space-between, center);
+    @include flex(column, space-between, center);
     height: 80vh;
   }
 }
 
 .projects {
-
   &__cards-wrapper {
     @include flex(column, center, center);
   }
@@ -48,7 +46,7 @@
   &__title {
     font-size: 1.5rem;
     margin-bottom: 1em;
-    margin-left: 1em;
+    margin-left: 2em;
   }
 
   &__subtitle {
@@ -57,7 +55,6 @@
 }
 
 .personal-projects {
-
   &__subtitle {
     text-align: center;
     margin-top: 1.5em;
@@ -82,7 +79,7 @@
       bottom: 25%;
       width: 100px;
       height: 100px;
-      background-color: rgba(255, 225, 0, 0.805);
+      background-color: rgba(255, 225, 0, 0.7);
       font-size: 0.7rem;
       text-align: center;
       transition: transform 0.3s ease;
@@ -103,7 +100,6 @@
       }
     }
   }
-
 }
 
 .contact {
@@ -128,7 +124,7 @@
 
   &__text {
     text-align: center;
-    margin-bottom: 2em
+    margin-bottom: 2em;
   }
 
   &__links {
@@ -141,7 +137,7 @@
     }
 
     a:hover {
-      transform: scale(1.2)
+      transform: scale(1.2);
     }
   }
 }
@@ -161,7 +157,7 @@
   transition: transform 0.3s, opacity 0.3s;
 
   @include respond-to(mobile) {
-    display: none
+    display: none;
   }
 }
 
@@ -174,7 +170,7 @@
   height: 15px;
   background-color: rgba(255, 225, 0, 0.507);
   border-radius: 50%;
-  transition: .2s ease;
+  transition: 0.2s ease;
   pointer-events: none;
   z-index: 999999;
   opacity: 1;
