--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,18 +1,55 @@
 @use "../../VariablesMixins.scss" as *;
+@import url("https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap");
 
 .hero {
   @include flex(column, normal, normal);
 
   width: 100%;
   height: 100vh;
-  background: linear-gradient(0deg, rgba(255, 178, 148, 1) 0%, rgba(255, 130, 98, 1) 16%, rgba(254, 101, 91, 1) 29%, rgba(152, 78, 100, 1) 40%, rgba(93, 81, 126, 1) 49%, rgba(43, 43, 86, 1) 58%, rgba(0, 0, 0, 1) 99%);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 178, 148, 1) 0%,
+    rgba(255, 130, 98, 1) 16%,
+    rgba(254, 101, 91, 1) 29%,
+    rgba(152, 78, 100, 1) 40%,
+    rgba(93, 81, 126, 1) 49%,
+    rgba(43, 43, 86, 1) 58%,
+    rgba(0, 0, 0, 1) 99%
+  );
   overflow: hidden;
   display: flex;
   align-items: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   position: relative;
 
+  .hero__logo--animated {
+    width: 40%;
+    transform: translateY(300px) scale(1);
+    animation: logoUpAndGrow 3s cubic-bezier(0.6, 0.1, 0.1, 1) forwards,
+      logoBreathe 2s 3s ease-in-out infinite alternate;
+  }
+
+  @keyframes logoUpAndGrow {
+    from {
+      transform: translateY(300px) scale(1.9);
+    }
+    to {
+      transform: translateY(-40vh) scale(1.2);
+    }
+  }
+
+  @keyframes logoBreathe {
+    from {
+      transform: translateY(-40vh) scale(1.2);
+    }
+    to {
+      transform: translateY(-40vh) scale(1.3);
+    }
+  }
+
   .typewritter {
+    font-family: "Handjet", sans-serif;
+    font-weight: 400;
     width: 30vw;
     color: #f0fdf4;
     font-size: 3rem;
@@ -26,7 +63,7 @@
   }
 
   h1 {
-    margin-top: 43vh;
+    margin-top: 55vh;
     text-align: center;
   }
 
