:art: style: add meta description to HTML; enhance Hero component with new styles and text; update logo positioning; refine contact section text and accessibility; adjust Home page layout for better responsiveness

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -46,6 +46,9 @@
     @media screen and (min-width: 1000px) {
       margin-top: 45vh;
     }
+    position: relative;
+    z-index: 9999999;
+    font-weight: 300;
   }
 
   &__image {
